docs/gramatica.ebnf
program = "E_HORA_DO_SHOW", { declaration },
          { statement }, "JA_ACABOU_JESSICA" ;

declaration = type, IDENTIFIER, "=", expression, ";" ;
type = "SABOR_INTEIRO" | "SABOR_REAL" | "SABOR_TEXTO" ;
block = { statement } ;
statement = assignment | input | output | if_stmt
          | while_stmt | break_stmt ;

assignment = "RECEBA", IDENTIFIER, "=", expression, ";" ;
input = "QUERO_CAFE", "(", IDENTIFIER, ")", ";" ;
output = "AMOSTRADINHO", "(", expression,
         { ",", expression }, ")", ";" ;
if_stmt = "PODE_ISSO_ARNALDO", "(", expression, ")",
          block, [ "ERROU", block ], "ATA" ;
while_stmt = "BORA_BILL", "(", expression, ")", block, "ATA" ;
break_stmt = "DESCANSAR_NE", ";" ;

expression = additive, [ relop, additive ] ;
relop = "==" | "!=" | "<" | "<=" | ">" | ">=" ;
additive = multiplicative, { ( "+" | "-" ), multiplicative } ;
multiplicative = unary, { ( "*" | "/" ), unary } ;
unary = ( "+" | "-" ), unary | primary ;
primary = INTEGER | REAL | STRING | IDENTIFIER
        | "(", expression, ")" ;
